Roles use cases

--- a/company/company_sidebar.yml
+++ b/company/company_sidebar.yml
@@ -48,7 +48,7 @@ entries:
       output: web, pdf
 
     - title: Request Demo
-      url: contacts/request-poc
+      url: contacts/request-demo
       output: web, pdf
 
     - title: Technical Support
