Added Support to side bar

--- a/use-cases/use-cases_sidebar.yml
+++ b/use-cases/use-cases_sidebar.yml
@@ -71,3 +71,7 @@ entries:
     - title: Integrations
       url: integrations/index
       output: web, pdf
+      
+    - title: Service Support
+      url: role/support
+      output: web, pdf
