Change in name for Service Managers

--- a/use-cases/use-cases_sidebar.yml
+++ b/use-cases/use-cases_sidebar.yml
@@ -44,7 +44,7 @@ entries:
       url: role/project-managers
       output: web, pdf
       
-    - title: Service Support Managers
+    - title: Service Managers
       url: role/support
       output: web, pdf
 
