--- a/use-cases/use-cases_sidebar.yml
+++ b/use-cases/use-cases_sidebar.yml
@@ -48,26 +48,26 @@ entries:
       url: role/service-managers
       output: web, pdf
       
-    - title: Smart Social Media Management
-      url: role/social
-      output: web, pdf
-      
-    - title: Reduce the number of Dashboards
-      url: role/dashboards
-      output: web, pdf
-      
-    - title: Unsolicied Customer Insights
-      url: role/customer-insights
-      output: web, pdf
-      
     - title: Data agility
       url: role/data-agility
+      output: web, pdf
+      
+    - title: Reducing the number of Dashboards
+      url: role/dashboards
       output: web, pdf
       
     - title: Smart Retail Analytics
       url: role/retail-analytics
       output: web, pdf
-
+      
+    - title: Unsolicited Customer Insights
+      url: role/customer-insights
+      output: web, pdf
+      
+    - title: Smart Social Media Management
+      url: role/social
+      output: web, pdf
+      
     - title: Finance Teams
       url: role/finance-teams
       output: web, pdf
@@ -99,25 +99,28 @@ entries:
   - title: By Objective
     output: web, pdf
     folderitems:
-
-    - title: Smart Social Media Management
-      url: role/social
-      output: web, pdf
-      
-    - title: Reduce the number of Dashboards
-      url: role/dashboards
-      output: web, pdf
-      
-    - title: Unsolicied Customer Insights
-      url: role/customer-insights
-      output: web, pdf
-      
+    
     - title: Data agility
       url: role/data-agility
+      output: web, pd
+      
+    - title: Reducing the number of Dashboards
+      url: role/dashboards
       output: web, pdf
       
     - title: Smart Retail Analytics
       url: role/retail-analytics
       output: web, pdf
+      
+    - title: Unsolicited Customer Insights
+      url: role/customer-insights
+      output: web, pdf
+
+    - title: Smart Social Media Management
+      url: role/social
+      output: web, pdf
+  
+      
+  
       
   
