--- a/.github/workflows/sync.yaml
+++ b/.github/workflows/sync.yaml
@@ -4,7 +4,7 @@ name: Synch BitBucket via HTTPS
 # events but only for the master branch
 on:
   push:
-    branches: [ main ]
+    branches: [ gh-pages ]
 
 jobs:
    
