--- a/docs/mydoc_sidebar.yml
+++ b/docs/mydoc_sidebar.yml
@@ -84,6 +84,10 @@ entries:
       url: docs/data-integrations
       output: web, pdf
       
+    - title: Connected data
+      url: docs/connected-data
+      output: web, pdf
+      
     - title: Dataset settings
       url: docs/dataset-settings
       output: web, pdf
